<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cdd.kr.android.hashchecker.MainActivity" >

    <LinearLayout
        android:id="@+id/llo_fileSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp" >

        <EditText
            android:id="@+id/etFilePath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
        </EditText>

        <Button
            android:id="@+id/btnFileSearch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/btn_fileSearch" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llo_CRC3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/llo_fileSearch"
        android:layout_marginLeft="10dp" >

        <TextView
            android:id="@+id/tvCRC3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_CRC3" />

        <TextView
            android:id="@+id/tvCRC3Result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="21dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llo_MD5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/llo_CRC3"
        android:layout_marginLeft="10dp" >

        <TextView
            android:id="@+id/tvMD5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_MD5" />

        <TextView
            android:id="@+id/tvMD5Result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="21dp"
            android:text="해시값 표시" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llo_SHA1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/llo_MD5"
        android:layout_marginLeft="10dp" >

        <TextView
            android:id="@+id/tvSHA1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_SHA1" />

        <TextView
            android:id="@+id/tvSHA1Result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="21dp"
            android:text="해시값 표시" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/llo_SHA1"
        android:layout_marginLeft="10dp" >

        <Switch
            android:id="@+id/swCompare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swt_fileCompare" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llComare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="18dp"
        android:orientation="vertical"
        android:visibility="gone"
         >

        <LinearLayout
            android:id="@+id/llo_fileSearch2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="18dp" >

            <EditText
                android:id="@+id/etFilePath2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnFileSearch2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:onClick="getfile"                
                android:text="@string/btn_fileSearch" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            >
        
            <TextView
                android:id="@+id/tvCompAlgorithm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_MD5" />

            </LinearLayout>
        
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            >

            <ImageView
                android:id="@+id/ivResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="TextView" />

            <ImageView
                android:id="@+id/ivResultWillDo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher" />
        </LinearLayout>
    </LinearLayout>

    

</RelativeLayout>